// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the Matrix component 1`] = `
<div>
  <table
    class="matrix test"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          articles
        </td>
        <td
          class="items"
        >
          <button
            class="item"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item"
            title="Edit"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus"
            />
          </button>
          <button
            class="item"
            title="Delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            Activate all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          redirects
        </td>
        <td
          class="items"
        >
          <button
            class="item"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            Activate all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          settings
        </td>
        <td
          class="items"
        >
          <button
            class="item"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item"
            title="Edit"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            Activate all
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Matrix component with values 1`] = `
<div>
  <table
    class="matrix"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          articles
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="Edit"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus"
            />
          </button>
          <button
            class="item"
            title="Delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            Deactivate all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          redirects
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            Deactivate all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          settings
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item"
            title="Edit"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            Deactivate all
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Matrix component with values in disabled state 1`] = `
<div>
  <table
    class="matrix disabled"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          articles
        </td>
        <td
          class="items"
        >
          <button
            class="item selected disabled"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected disabled"
            title="Edit"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus"
            />
          </button>
          <button
            class="item disabled"
            title="Delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          redirects
        </td>
        <td
          class="items"
        >
          <button
            class="item selected disabled"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          settings
        </td>
        <td
          class="items"
        >
          <button
            class="item selected disabled"
            title="View"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item disabled"
            title="Edit"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
